# mtg_official_event_scraper

./: README.md  index.html  mtg_events.csv  mtg_events.ics  mtg_events_latest.csv  pyproject.toml
.github/workflows/: update_calendar.yml
src/mtg_official_event_scraper/: __init__.py
